// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/fleet-members/AddStoreFilterSorter Snapshots Default 1`] = `
<div
  class="px-4 pt-4"
>
  <div
    class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline theme--light"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-text-field__slot"
        >
          <label
            aria-hidden="true"
            class="v-label theme--light"
            style="left: 0px; position: absolute;"
          >
            Search by Fleet Member name
          </label>
          <input
            aria-label="Search by Fleet Member name"
            type="text"
          />
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light"
        >
          <div
            class="v-messages__wrapper"
          />
        </div>
      </div>
    </div>
  </div>
   
  <div>
    <div
      class="pb-4"
    >
      <button
        class="font-weight-bold grey--text"
      >
        <span>
          <div
            class="flex"
          >
            <i
              aria-hidden="true"
              class="v-icon fa fa-caret-right theme--light"
              style="font-size: 16px;"
            />
            
            Show Filters
          
          </div>
        </span>
      </button>
    </div>
     
    <div
      style="display: none;"
    >
      <div
        class="layout row wrap align-center justify-center"
      >
        <div
          class="flex sm3 pr-2"
        >
          <div
            class="layout row justify-space-between mb-2"
          >
            <div
              class="grey--text white--text"
            >
              <strong
                class="no-wrap"
              >
                
              State
            
              </strong>
            </div>
             
            <!---->
          </div>
           
          <div
            class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline theme--light"
          >
            <div
              class="v-input__control"
            >
              <div
                class="v-input__slot"
              >
                <div
                  class="v-text-field__slot"
                >
                  <label
                    aria-hidden="true"
                    class="v-label theme--light"
                    style="left: 0px; position: absolute;"
                  >
                    State of incorporation
                  </label>
                  <input
                    aria-label="State of incorporation"
                    type="text"
                  />
                </div>
              </div>
              <div
                class="v-text-field__details"
              >
                <div
                  class="v-messages theme--light"
                >
                  <div
                    class="v-messages__wrapper"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <div
          class="flex sm3 pr-2"
        >
          <div
            class="layout row justify-space-between mb-2"
          >
            <div
              class="grey--text white--text"
            >
              <strong
                class="no-wrap"
              >
                
              Type
            
              </strong>
            </div>
             
            <!---->
          </div>
           
          <div
            class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-select theme--light"
            role="combobox"
          >
            <div
              class="v-input__control"
            >
              <div
                class="v-input__slot"
              >
                <div
                  class="v-select__slot"
                >
                  <label
                    aria-hidden="true"
                    class="v-label theme--light"
                    style="left: 0px; position: absolute;"
                  >
                    Type
                  </label>
                  <div
                    class="v-select__selections"
                  >
                    <input
                      aria-label="Type"
                      aria-readonly="false"
                      autocomplete="on"
                      readonly="readonly"
                      type="text"
                    />
                  </div>
                  <div
                    class="v-input__append-inner"
                  >
                    <div
                      class="v-input__icon v-input__icon--append"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        arrow_drop_down
                      </i>
                    </div>
                  </div>
                </div>
                <div
                  class="v-menu"
                >
                  <div
                    class="v-menu__content theme--light "
                    style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                  >
                    <div
                      class="v-select-list v-card theme--light"
                    >
                      <div
                        class="v-list theme--light"
                        role="list"
                      >
                        <div
                          role="listitem"
                        >
                          <div
                            class="v-list__tile theme--light"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                No data available
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="v-text-field__details"
              >
                <div
                  class="v-messages theme--light"
                >
                  <div
                    class="v-messages__wrapper"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <div
          class="flex sm3 pr-2"
        >
          <div
            class="layout row justify-space-between mb-2"
          >
            <div
              class="grey--text white--text"
            >
              <strong
                class="no-wrap"
              >
                
              Tags
            
              </strong>
            </div>
             
            <!---->
          </div>
           
          <div
            class="v-input v-text-field v-text-field--single-line v-text-field--solo v-text-field--solo-flat v-text-field--enclosed v-text-field--placeholder v-input--hide-details v-input--is-readonly theme--light"
          >
            <div
              class="v-input__control"
            >
              <div
                class="v-input__slot white"
                style="height: 48px;"
              >
                <div
                  class="v-text-field__slot"
                >
                  <input
                    not-clearable=""
                    ouline=""
                    placeholder="Search Tag"
                    readonly="readonly"
                    results-id-key="uuid"
                    term-param="filter[name]"
                    type="text"
                    url="foodfleet/store-tags"
                  />
                </div>
                <div
                  class="v-input__append-inner"
                >
                  <div
                    class="v-input__icon v-input__icon--append"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon fas fa-caret-down theme--light"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            background-color="white"
            class="v-menu mt-0 pt-0 mb-4"
            flat=""
            height="48"
            not-clearable=""
            ouline=""
            placeholder="Search Tag"
            results-id-key="uuid"
            solo=""
            term-param="filter[name]"
            url="foodfleet/store-tags"
          >
            <div
              class="v-menu__content theme--light "
              style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
            >
               
              <div
                autofocus="autofocus"
                background-color="white"
                class="v-input v-text-field v-text-field--single-line v-text-field--solo v-text-field--solo-flat v-text-field--enclosed v-text-field--placeholder v-select v-autocomplete v-input--hide-details v-input--is-focused theme--light primary--text"
                flat=""
                height="48"
                menu-props="[object Object]"
                ouline=""
                solo=""
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot white"
                    style="height: 48px;"
                  >
                    <div
                      class="v-select__slot"
                    >
                      <div
                        class="v-select__selections"
                      >
                        <input
                          aria-label=""
                          autocomplete="off"
                          autofocus="autofocus"
                          ouline=""
                          placeholder="Search Tag"
                          role="combobox"
                          type="text"
                        />
                      </div>
                      <div
                        class="v-input__append-inner"
                      >
                        <div
                          class="v-input__icon v-input__icon--append"
                        >
                          <i
                            aria-hidden="true"
                            class="v-icon material-icons theme--light primary--text"
                          >
                            arrow_drop_down
                          </i>
                        </div>
                      </div>
                    </div>
                    <div
                      class="v-menu"
                    >
                      <div
                        class="v-menu__content theme--light v-autocomplete__content"
                        style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                      >
                        <div
                          class="v-select-list v-card theme--light"
                        >
                          <div
                            class="v-list theme--light"
                            role="list"
                          >
                            <div
                              role="listitem"
                              style="display: none;"
                            >
                              <div
                                class="v-list__tile theme--light"
                              >
                                <span
                                  class="search-section-title"
                                >
                                  SELECTION
                                </span>
                              </div>
                            </div>
                              
                            <div
                              role="listitem"
                              style="display: none;"
                            >
                              <div
                                class="v-list__tile theme--light"
                              >
                                <span
                                  class="search-section-title"
                                >
                                  RESULTS
                                </span>
                              </div>
                            </div>
                            <div
                              role="listitem"
                            >
                              <div
                                class="v-list__tile theme--light"
                              >
                                <div
                                  class="v-list__tile__content"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    No data available
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <div
          class="flex sm3"
        >
          <button
            class="v-btn v-btn--large v-btn--depressed theme--light"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              
            Clear all filters
          
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/fleet-members/AddStoreFilterSorter Snapshots Populated 1`] = `
<div
  class="px-4 pt-4"
>
  <div
    class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-input--is-label-active v-input--is-dirty theme--light"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-text-field__slot"
        >
          <input
            aria-label="Search by Fleet Member name"
            type="text"
          />
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light"
        >
          <div
            class="v-messages__wrapper"
          />
        </div>
      </div>
    </div>
  </div>
   
  <div>
    <div
      class="pb-4"
    >
      <button
        class="font-weight-bold grey--text"
      >
        <span>
          <div
            class="flex"
          >
            <i
              aria-hidden="true"
              class="v-icon fa fa-caret-right theme--light"
              style="font-size: 16px;"
            />
            
            Show Filters
          
          </div>
        </span>
      </button>
    </div>
     
    <div
      style="display: none;"
    >
      <div
        class="layout row wrap align-center justify-center"
      >
        <div
          class="flex sm3 pr-2"
        >
          <div
            class="layout row justify-space-between mb-2"
          >
            <div
              class="grey--text white--text"
            >
              <strong
                class="no-wrap"
              >
                
              State
            
              </strong>
            </div>
             
            <button
              class="mr-0 v-btn v-btn--flat v-btn--icon theme--light grey--text"
              color="grey"
              type="button"
            >
              <div
                class="v-btn__content"
              >
                <i
                  aria-hidden="true"
                  class="v-icon clear-button-icon fa fa fa fa-times theme--light"
                />
              </div>
            </button>
          </div>
           
          <div
            class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-input--is-label-active v-input--is-dirty theme--light"
          >
            <div
              class="v-input__control"
            >
              <div
                class="v-input__slot"
              >
                <div
                  class="v-text-field__slot"
                >
                  <input
                    aria-label="State of incorporation"
                    type="text"
                  />
                </div>
              </div>
              <div
                class="v-text-field__details"
              >
                <div
                  class="v-messages theme--light"
                >
                  <div
                    class="v-messages__wrapper"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <div
          class="flex sm3 pr-2"
        >
          <div
            class="layout row justify-space-between mb-2"
          >
            <div
              class="grey--text white--text"
            >
              <strong
                class="no-wrap"
              >
                
              Type
            
              </strong>
            </div>
             
            <button
              class="mr-0 v-btn v-btn--flat v-btn--icon theme--light grey--text"
              color="grey"
              type="button"
            >
              <div
                class="v-btn__content"
              >
                <i
                  aria-hidden="true"
                  class="v-icon clear-button-icon fa fa fa fa-times theme--light"
                />
              </div>
            </button>
          </div>
           
          <div
            class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-select v-input--is-label-active v-input--is-dirty theme--light"
            role="combobox"
          >
            <div
              class="v-input__control"
            >
              <div
                class="v-input__slot"
              >
                <div
                  class="v-select__slot"
                >
                  <div
                    class="v-select__selections"
                  >
                    <div
                      class="v-select__selection v-select__selection--comma"
                    >
                      Mobile
                    </div>
                    <input
                      aria-label="Type"
                      aria-readonly="false"
                      autocomplete="on"
                      readonly="readonly"
                      type="text"
                    />
                  </div>
                  <div
                    class="v-input__append-inner"
                  >
                    <div
                      class="v-input__icon v-input__icon--append"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        arrow_drop_down
                      </i>
                    </div>
                  </div>
                </div>
                <div
                  class="v-menu"
                >
                  <div
                    class="v-menu__content theme--light "
                    style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                  >
                    <div
                      class="v-select-list v-card theme--light"
                    >
                      <div
                        class="v-list theme--light"
                        role="list"
                      >
                        <div
                          class="primary--text"
                          role="listitem"
                        >
                          <a
                            class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                Mobile
                              </div>
                            </div>
                          </a>
                        </div>
                        <div
                          role="listitem"
                        >
                          <a
                            class="v-list__tile v-list__tile--link theme--light"
                          >
                            <div
                              class="v-list__tile__content"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                Stationery
                              </div>
                            </div>
                          </a>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="v-text-field__details"
              >
                <div
                  class="v-messages theme--light"
                >
                  <div
                    class="v-messages__wrapper"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <div
          class="flex sm3 pr-2"
        >
          <div
            class="layout row justify-space-between mb-2"
          >
            <div
              class="grey--text white--text"
            >
              <strong
                class="no-wrap"
              >
                
              Tags
            
              </strong>
            </div>
             
            <button
              class="mr-0 v-btn v-btn--flat v-btn--icon theme--light grey--text"
              color="grey"
              type="button"
            >
              <div
                class="v-btn__content"
              >
                <i
                  aria-hidden="true"
                  class="v-icon clear-button-icon fa fa fa fa-times theme--light"
                />
              </div>
            </button>
          </div>
           
          <div
            class="v-input v-text-field v-text-field--single-line v-text-field--solo v-text-field--solo-flat v-text-field--enclosed v-text-field--placeholder v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--is-readonly theme--light"
          >
            <div
              class="v-input__control"
            >
              <div
                class="v-input__slot white"
                style="height: 48px;"
              >
                <div
                  class="v-text-field__slot"
                >
                  <input
                    not-clearable=""
                    ouline=""
                    placeholder="Search Tag"
                    readonly="readonly"
                    results-id-key="uuid"
                    term-param="filter[name]"
                    type="text"
                    url="foodfleet/store-tags"
                  />
                </div>
                <div
                  class="v-input__append-inner"
                >
                  <div
                    class="v-input__icon v-input__icon--append"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon fas fa-caret-down theme--light"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            background-color="white"
            class="v-menu mt-0 pt-0 mb-4"
            flat=""
            height="48"
            not-clearable=""
            ouline=""
            placeholder="Search Tag"
            results-id-key="uuid"
            solo=""
            term-param="filter[name]"
            url="foodfleet/store-tags"
          >
            <div
              class="v-menu__content theme--light "
              style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
            >
               
              <div
                autofocus="autofocus"
                background-color="white"
                class="v-input v-text-field v-text-field--single-line v-text-field--solo v-text-field--solo-flat v-text-field--enclosed v-text-field--placeholder v-select v-autocomplete v-input--hide-details v-input--is-focused theme--light primary--text"
                flat=""
                height="48"
                menu-props="[object Object]"
                ouline=""
                solo=""
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot white"
                    style="height: 48px;"
                  >
                    <div
                      class="v-select__slot"
                    >
                      <div
                        class="v-select__selections"
                      >
                        <input
                          aria-label=""
                          autocomplete="off"
                          autofocus="autofocus"
                          ouline=""
                          placeholder="Search Tag"
                          role="combobox"
                          type="text"
                        />
                      </div>
                      <div
                        class="v-input__append-inner"
                      >
                        <div
                          class="v-input__icon v-input__icon--append"
                        >
                          <i
                            aria-hidden="true"
                            class="v-icon material-icons theme--light primary--text"
                          >
                            arrow_drop_down
                          </i>
                        </div>
                      </div>
                    </div>
                    <div
                      class="v-menu"
                    >
                      <div
                        class="v-menu__content theme--light v-autocomplete__content"
                        style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                      >
                        <div
                          class="v-select-list v-card theme--light"
                        >
                          <div
                            class="v-list theme--light"
                            role="list"
                          >
                            <div
                              role="listitem"
                              style="display: none;"
                            >
                              <div
                                class="v-list__tile theme--light"
                              >
                                <span
                                  class="search-section-title"
                                >
                                  SELECTION
                                </span>
                              </div>
                            </div>
                              
                            <div
                              role="listitem"
                              style="display: none;"
                            >
                              <div
                                class="v-list__tile theme--light"
                              >
                                <span
                                  class="search-section-title"
                                >
                                  RESULTS
                                </span>
                              </div>
                            </div>
                            <div
                              role="listitem"
                            >
                              <div
                                class="v-list__tile theme--light"
                              >
                                <div
                                  class="v-list__tile__content"
                                >
                                  <div
                                    class="v-list__tile__title"
                                  >
                                    No data available
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <div
          class="flex sm3"
        >
          <button
            class="v-btn v-btn--large v-btn--depressed theme--light"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              
            Clear all filters
          
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
